# RoboSimKit

./: LICENSE  README.md  pyproject.toml
controllers/: __init__.py  demo_utils.py  follow_figure8.py  go_to_goal.py  obstacle_detection.py  sim_utils.py  trajectory_generator.py
examples/: __init__.py  demo_dwa_unicycle.py  demo_follow_figure8.py  demo_go_to_goal.py  demo_template.py  demo_with_obstacle.py
models/: __init__.py  ackermann.py  omni.py  unicycle.py
utils/: __init__.py  angles.py  rangesensor.py
visualization/: __init__.py  plotter2d.py  robot_icon.py
